[gd_scene load_steps=8 format=3 uid="uid://m5agv6axbsc6"]

[ext_resource type="Texture2D" uid="uid://wq4v756w1nxg" path="res://assets/pictures/HitChart.png" id="1_wipww"]
[ext_resource type="Texture2D" uid="uid://ceo6r270ad6y3" path="res://assets/pictures/HitChart1.png" id="2_fr2o7"]
[ext_resource type="Script" path="res://src/BG/HitChart/HitChart.gd" id="3_tn8lm"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4ufok"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_wipww")
}, {
"duration": 1.0,
"texture": ExtResource("2_fr2o7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_d0800"]
radius = 33.5261

[sub_resource type="CircleShape2D" id="CircleShape2D_xc5r3"]
radius = 48.1664

[sub_resource type="CircleShape2D" id="CircleShape2D_ry6tg"]
radius = 69.0507

[node name="HitIt" type="AnimatedSprite2D" groups=["note"]]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_4ufok")
frame_progress = 0.864851
script = ExtResource("3_tn8lm")

[node name="PerfectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerfectArea"]
shape = SubResource("CircleShape2D_d0800")

[node name="GoodArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoodArea"]
shape = SubResource("CircleShape2D_xc5r3")

[node name="OkArea" type="Area2D" parent="GoodArea"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoodArea/OkArea"]
shape = SubResource("CircleShape2D_ry6tg")

[node name="PushTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="area_entered" from="PerfectArea" to="." method="_on_PerfectArea_area_entered"]
[connection signal="area_exited" from="PerfectArea" to="." method="_on_PerfectArea_area_exited"]
[connection signal="area_entered" from="GoodArea" to="." method="_on_GoodArea_area_entered"]
[connection signal="area_exited" from="GoodArea" to="." method="_on_GoodArea_area_exited"]
[connection signal="area_entered" from="GoodArea/OkArea" to="." method="_on_OkayArea_area_entered"]
[connection signal="area_exited" from="GoodArea/OkArea" to="." method="_on_OkayArea_area_exited"]
[connection signal="timeout" from="PushTimer" to="." method="_on_PushTimer_timeout"]
